#4843 - Promote sidebar curation mode to proper curation page
- Add configuration to switch between new and legacy curaiton page